<resources>
    <string name="app_name">MyEverest</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_challenge">Challenges</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_staylogged">Stay logged</string>
    <string name="title_activity_maps">Map</string>
    <string name="user_name">Username</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="erstellen">Erstellen</string>
    <string name="challenges">Challenges</string>
    <string name="user">User</string>
    <string name="challengegram">Challengegram</string>
    <string name="karte">Karte</string>
    <string name="profil">Profil</string>
    <string name="freunde">Freunde</string>
    <string name="sozial">Sozial</string>
    <string name="create_challenge_button">Create Challenge Button</string>
    <string name="zielchallenge">Zielchallenge</string>
    <string name="schrittchallenge">Schrittchallenge</string>
    <string name="individualchallenge">Individualchallenge</string>
    <string name="noch_kein_account_hier_registrieren">Noch kein Account? <u> Hier registrieren! </u></string>
    <string name="passwort_vergessen"> <u> Passwort vergessen? </u></string>
    <string name="account_schon_vorhanden_hier_einloggen">Account schon vorhanden? <u>Hier Einloggen!</u></string>
    <string name="username" />
    <string name="element_text">ReclyerElementText</string>
    <string name="challenges_tippe_zum_beitreten">Challenges (tippe zum beitreten):</string>
</resources>