<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:id="@+id/menu_top">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_stairs_24"
            android:title="@string/menu_challenge" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_filter_24"
            android:title="@string/menu_gallery" />
    </group>
    <group android:id="@+id/menu_bottom">
        <item
            android:id="@+id/app_bar_switch"
            android:title="@string/menu_staylogged"
            android:icon="@drawable/ic_staylogged"
            app:actionLayout="@layout/switch_item" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout"/>
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/menu_settings" />
    </group>
</menu>